force-app/main/default/objects/SalesHeader__c/SalesHeader__c.object-meta.xml
<CustomObject>
    <label>SalesHeader</label>
    <nameField>
        <displayFormat>SH-{000000}</displayFormat>
        <label>SalesHeader Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesHeader</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>