force-app/main/default/objects/SalesHeader__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SalesHeader</relationshipLabel>
    <relationshipName>SalesHeader</relationshipName>
    <type>Lookup</type>
</CustomField>