force-app/main/default/objects/SalesHeader__c/fields/Bill_to_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Postal_Code__c</fullName>
    <label>Bill to Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>