force-app/main/default/objects/SalesHeader__c/fields/Bill_to_street__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_street__c</fullName>
    <label>Bill to street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>