force-app/main/default/objects/SalesHeader__c/fields/Names__c.field-meta.xml
<CustomField>
    <fullName>Names__c</fullName>
    <label>Names</label>
    <length>100</length>
    <type>Text</type>
</CustomField>