force-app/main/default/objects/SalesHeader__c/fields/Ship_to_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Postal_Code__c</fullName>
    <label>Ship to Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>