force-app/main/default/objects/SalesHeader__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>